@@ -1,3 +1,10 @@
+Tue Sep 30 16:39:06 UTC 2008  Steven Stallion  <stallions@ociweb.com>
+
+        * java/tests/complex_idl/ComplexIDLTest.java:
+        * java/tests/complex_idl/QuoteSupport.java:
+
+          Cleaned up imports.
+
 Mon Sep 29 21:26:18 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
         * java/tests/builtintopics/run_test.pl:
